--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/framework-bundle": "^6.0",
         "hgabka/utils-bundle": "^6.0",
         "google/cloud-storage": "^1.35",
-	"liip/imagine-bundle": "^2.7",
+	"liip/imagine-bundle": "^2.7"
     },
     "autoload": {
         "psr-4": {
