--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -6,7 +6,7 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     Hgabka\GoogleCloudBundle\:
-        resource: '../../src/'
+        resource: '../../'
         exclude:
             - '../../DependencyInjection/'
             - '../../Entity/'
