--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php" : ">=8.0.2",
         "symfony/framework-bundle": "^6.0",
         "hgabka/utils-bundle": "^6.0",
+        "hgabka/media-bundle": "^6.0",
         "google/cloud-storage": "^1.35",
 	"liip/imagine-bundle": "^2.7"
     },
